--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,13 @@
 [versions]
-agp = "8.10.0"
+agp = "8.10.1"
 androidx-activity-compose = "1.10.1"
 androidx-compose = "1.8.2"
 androidx-compose-material3 = "1.3.2"
 androidx-core = "1.16.0"
+androidx-navigation = "2.9.0"
 koin = "4.0.3"
-koin-annotations = "2.0.0"
 kotlin = "2.1.21"
+kotlinx-serialization-json = "1.8.1"
 ksp = "2.1.21-2.0.1"
 moko-resources = "0.24.5"
 xml-util = "0.91.1"
@@ -18,14 +19,13 @@ androidx-compose-ui = { module = "androidx.compose.ui:ui", version.ref = "androi
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "androidx-compose" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "androidx-compose" }
 androidx-core = { module = "androidx.core:core", version.ref = "androidx-core" }
-koin-annotations = { module = "io.insert-koin:koin-annotations" }
-koin-annotations-bom = { module = "io.insert-koin:koin-annotations-bom", version.ref = "koin-annotations" }
-koin-annotations-ksp-compiler = { module = "io.insert-koin:koin-ksp-compiler", version.ref = "koin-annotations" }
+androidx-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation" }
 koin-bom = { module = "io.insert-koin:koin-bom", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose" }
 koin-compose-viewmodel = { module = "io.insert-koin:koin-compose-viewmodel" }
 koin-compose-viewmodel-navigation = { module = "io.insert-koin:koin-compose-viewmodel-navigation" }
 koin-core = { module = "io.insert-koin:koin-core" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization-json" }
 moko-resources = { module = "dev.icerock.moko:resources", version.ref = "moko-resources" }
 moko-resources-generator = { module = "dev.icerock.moko:resources-generator", version.ref = "moko-resources" }
 xmlutil-core = { module = "io.github.pdvrieze.xmlutil:core", version.ref = "xml-util" }
@@ -45,12 +45,6 @@ koin-compose = [
     "koin-compose",
     "koin-compose-viewmodel",
     "koin-compose-viewmodel-navigation",
-    "koin-annotations",
-    "koin-core",
-]
-
-koin-shared = [
-    "koin-annotations",
     "koin-core",
 ]
 
@@ -60,4 +54,5 @@ compose = [
     "androidx-compose-ui",
     "androidx-compose-ui-tooling",
     "androidx-compose-ui-tooling-preview",
+    "androidx-navigation",
 ]
